--- a/SuitSupply_Demo.html
+++ b/SuitSupply_Demo.html
@@ -22,7 +22,7 @@ embedded_svc.settings.displayHelpButton = false; //Or false
 embedded_svc.settings.initialInteractionState = 'PRECHAT'; //Or 'WAITING'
 embedded_svc.settings.onlineText = 'Chat with a Stylist'; //(defaults to Chat with an Expert, localized)
 embedded_svc.settings.offlineText = 'Stylists Offline'; //(defaults to Agent Offline, localized)
-embedded_svc.init('https://gs0.salesforce.com', 'https://d.la.gus.salesforce.com/chat', 'https://c.la.gus.salesforce.com/content', 'https://stanleyhcdf15-14fa5059341.secure.force.com', '572B000000008ZM', '00DB00000002V3P', '573B00000000AEg', '204.0', gslbBaseUrl); }; if (!window.embedded_svc) { var s = document.createElement('script'); s.setAttribute('src', 'https://gs0.salesforce.com/embeddedservice/204.0/esw.min.js'); s.onload = function() { initESW(null); }; document.body.appendChild(s);} else { initESW('https://gs0.salesforce.com'); }</script>
+embedded_svc.init('https://servicecloudpm.my.salesforce.com', 'https://d.la.gus.salesforce.com/chat', 'https://c.la.gus.salesforce.com/content', 'https://stanleyhcdf15-14fa5059341.secure.force.com', '572B00000000Ksw', '00DB00000002V3P', '573B00000000S6c', '1.0', gslbBaseUrl, '39.0', 'Suit_Supply_Deployment_Release_Readiness', 'EmbeddedServiceLiveAgent_Parent04IB00000004CFBMA2_159af36e180'); }; if (!window.embedded_svc) { var s = document.createElement('script'); s.setAttribute('src', 'https://servicecloudpm.my.salesforce.com/embeddedservice/1.0/esw.min.js'); s.onload = function() { initESW(null); }; document.body.appendChild(s);} else { initESW('https://servicecloudpm.my.salesforce.com'); }</script>
 
 
 </body>
